test/tests/UnterminatedString.expected
UnterminatedString.panda:2:23: error: unterminated string literal
1 error
