test/tests/UnterminatedString.panda
method main() {
    Console.printLine("Hello, World!)
}
